--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "koa": "^2.4.1",
     "koa-better-router": "^2.1.1",
-    "koa-body": "^2.5.0"
+    "koa-body": "^2.5.0",
+    "uniqid": "^4.1.1"
   }
 }
