--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "koa": "^2.4.1",
     "koa-better-router": "^2.1.1",
     "koa-body": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
+    "mime": "^2.2.2",
+    "raw-body": "^2.3.2",
+    "temp-write": "^3.4.0",
+    "tempdir": "^2.0.0",
+    "tempfile": "^2.0.0",
     "uniqid": "^4.1.1"
   }
 }
